--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@
 /viikko4/Tennis/build/
 /viikko5/LaskinFX8/.nb-gradle/
 /viikko5/LaskinFX8/build/
+/viikko6/QueryLanguage/.nb-gradle/
+/viikko6/QueryLanguage/build/
+/viikko7/KiviPaperiSakset/.nb-gradle/
+/viikko7/KiviPaperiSakset/build/
